# diffusion-cli

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  README.md  pyproject.toml
.github/workflows/: auto-tag-main.yml
src/diffusion/: __init__.py  __main__.py  cli.py  server.py
src/diffusion/commands/: agent.py  catalog.py  chat.py  info.py  list_cmd.py  pull.py  remove.py  run.py  serve.py  variants.py
src/diffusion/core/: cache.py  detect.py  generate.py  hardware.py  memory.py  models.py  optimize.py  planner.py  preview.py  registry.py  samplers.py  variants.py
src/diffusion/utils/: console.py  errors.py  prompt.py  terminal_image.py  ui.py
tests/: conftest.py  test_cache.py  test_cli_startup.py  test_commands.py  test_detect.py  test_generate.py  test_hardware.py  test_memory.py  test_optimize.py  test_preview.py  test_prompt.py  test_registry.py  test_samplers.py  test_server.py  test_ui.py  test_variants.py
tests/fixtures/: config_unet_sd15.json  config_unet_sdxl.json  model_index_flux.json  model_index_generic.json  model_index_pixart.json  model_index_sd15.json  model_index_sd3.json  model_index_sdxl.json  model_index_unknown.json
