[project]
name = "diffusion-cli"
version = "0.1.0"
description = "Unified local diffusion runner for image generation — an ollama-style CLI for HuggingFace diffusion models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "diffusers>=0.38.0",
    "fastapi>=0.115.0",
    "huggingface-hub>=1.20.1",
    "pillow>=12.2.0",
    "prompt-toolkit>=3.0.0",
    "psutil>=5.9.0",
    "rich>=15.0.0",
    "safetensors>=0.8.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
    "typer>=0.25.1",
    "uvicorn>=0.32.0",
]

[project.scripts]
diffusion = "diffusion.cli:entrypoint"

[project.optional-dependencies]
agent = ["anthropic>=0.40.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diffusion"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.18",
    "types-psutil>=7.1.0.20251121",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that download models or run real inference (deselect with '-m \"not integration\"')",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "RUF",  # ruff-specific rules
    "D",    # pydocstyle
]
ignore = [
    "D105",    # missing docstring in magic method
    "D107",    # missing docstring in __init__
    "RUF001",  # ambiguous unicode (× and › are intentional in CLI output)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]            # tests don't need docstrings
"**/__init__.py" = ["D104"]  # don't require docstrings in package __init__

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
include = ["src/diffusion"]
reportPrivateImportUsage = "none"
